gw keren banget deh

--- a/public/upload.html
+++ b/public/upload.html
@@ -86,7 +86,8 @@
     <p>© <span id="year"></span> No Ads Stream</p>
   </footer>
 
-  <script>const _0x2d2471 = _0x7bb4;
+  <script>
+  const _0x2d2471 = _0x7bb4;
 (function (_0x1e7665, _0x2f4bbe) {
     const _0x1db051 = _0x7bb4, _0x5515b8 = _0x1e7665();
     while (!![]) {
@@ -560,6 +561,7 @@ dropZone[_0x2d2471(0x24c) + _0x2d2471(0x2bc)](_0x2d2471(0x1ee), () => fileInput[
             }
         };
     _0x18bdec[_0xf4a389(0x1f0) + _0xf4a389(0x2b7)](), dropZone[_0xf4a389(0x227)][_0xf4a389(0x264)](_0x5a2b38[_0xf4a389(0x28d)]), _0x5a2b38[_0xf4a389(0x21b)](_0x18bdec[_0xf4a389(0x24e) + 'er'][_0xf4a389(0x295)][_0xf4a389(0x2b0)], 0x23de + 0xb03 + -0x2ee1) && _0x5a2b38[_0xf4a389(0x22f)](handleFileSelect, _0x18bdec[_0xf4a389(0x24e) + 'er'][_0xf4a389(0x295)]);
-}), fileInput[_0x2d2471(0x24c) + _0x2d2471(0x2bc)](_0x2d2471(0x25a), () => handleFileSelect(fileInput[_0x2d2471(0x295)])), uploadButton[_0x2d2471(0x24c) + _0x2d2471(0x2bc)](_0x2d2471(0x1ee), () => processUploadQueue());</script>
+}), fileInput[_0x2d2471(0x24c) + _0x2d2471(0x2bc)](_0x2d2471(0x25a), () => handleFileSelect(fileInput[_0x2d2471(0x295)])), uploadButton[_0x2d2471(0x24c) + _0x2d2471(0x2bc)](_0x2d2471(0x1ee), () => processUploadQueue());
+</script>
 </body>
 </html>
